@@ -27,3 +27,4 @@
 * legend in year diagram
 * ability to use a picture pattern
 * libration diagram
+* geocentric ecliptic coordinates in tooltip
